--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
-Package: nonlinSims
-Title: What the Package Does (One Line, Title Case)
+Package: nonlinSIms
+Type: Package
+Title: Simulations to evaluate structured latent growth curve models
+Version: 0.1.0
 Author: Sebastian Sciarra 
 Maintainer: <seb@sciarra.io>
-Description: What the package does (one paragraph).
+Description: Evaluates structured latent growth curve models under a variety of conditions  
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Roxygen: list(markdown = TRUE)
+URL: https://github.com/sebsciarra/nonlinSimds,
+BugReports: https://github.com/sebsciarra/nonlinSimds/issues
 RoxygenNote: 7.2.3
 Suggests: 
     knitr,
@@ -19,5 +22,4 @@ Imports:
   parallel, 
   progress, 
   purrr
-VignetteBuilder: knitr
-Config/testthat/edition: 3
+
